mlops/eks-rag/eks-deploy/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rag-backend
  namespace: rag-system
  labels:
    app: rag-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rag-backend
  template:
    metadata:
      labels:
        app: rag-backend
    spec:
      serviceAccountName: rag-backend
      containers:
      - name: rag-backend
        image: 615299759525.dkr.ecr.ap-southeast-2.amazonaws.com/aws-eks-rag-weaviate-backend:latest
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: efs-chat-history
          mountPath: /efs
        resources:
          requests:
            memory: "300Mi"
            cpu: "100m"
          limits:
            memory: "1Gi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 30
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 30
          failureThreshold: 3
      volumes:
      - name: efs-chat-history
        persistentVolumeClaim:
          claimName: efs-chat-history-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: rag-backend-service
  namespace: rag-system
  labels:
    app: rag-backend
spec:
  selector:
    app: rag-backend
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
  type: ClusterIP
